<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_all"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:icon="@drawable/package_icon"
          android:title="Todos" />
    <item android:id="@+id/menu_calendar"
    	  android:icon="@drawable/calendar_icon1"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:title="@string/fetch_month_movies" />
    <item android:id="@+id/menu_alarmes"
    	  android:icon="@drawable/alarm_icon"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:title="@string/alarms"/>
    <item android:id="@+id/menu_estatistica"
    	  android:icon="@drawable/statistics_icon"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:title="@string/estatistica"/>
    <item android:id="@+id/menu_destaques"
    	  android:icon="@drawable/destaques_icon"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:title="@string/destaques" />
    <item android:id="@+id/menu_actors"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:title="Actores" />
    <item android:id="@+id/menu_settings"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
    	  android:icon="@drawable/settings_icon"
          android:title="@string/settings"/>
    <item android:id="@+id/menu_limpar_cache"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:icon="@drawable/clear_cashe"
          android:title="@string/clear_cache"/>
    <item android:id="@+id/menu_sobre"
    	  android:icon="@drawable/sobre"
    	  android:layout_width="wrap_content" 
          android:layout_height="wrap_content"
          android:title="@string/about"/>
</menu>
